# gmsv_mongo

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  general_issue.md
.github/workflows/: build.yml  deploy.yml  rust.yml
docs/: content.config.ts  nuxt.config.ts  package.json
docs/.github/workflows/: deploy.yml
docs/app/: app.config.ts  app.vue
docs/app/pages/: index.vue
docs/content/: index.md
docs/content/1.getting-started/: 1.index.md  2.installation.md  3.configuration.md  3.quick-start.md  4.core-concepts.md  4.first-steps.md  5.async-operations.md
docs/content/2.connection/: 1.index.md  2.basic.md  3.options.md  4.database.md
docs/content/3.crud-operations/: 1.index.md  1.overview.md  2.create.md  2.insert.md  3.query.md  3.read.md  4.update.md  5.delete.md  6.async.md  6.filters.md  7.operators.md  7.patterns.md
docs/content/4.advanced/: 1.index.md  2.aggregation.md  (+1 more)
docs/content/4.advanced-features/: 1.overview.md  2.aggregation.md  3.database-management.md  4.index-management.md
examples/advanced/: 01_aggregation.lua
examples/async/: callback_examples.lua
examples/basic/: 01_connection.lua
src/: lib.rs  updatecheck.rs
src/api/: callbacks.rs  client.rs  collection.rs  collection_async.rs  database.rs  mod.rs
src/config/: mod.rs
src/core/: connection.rs  mod.rs  runtime.rs  worker.rs
src/error/: mod.rs
src/operations/: aggregation.rs  crud.rs  indexes.rs  management.rs  mod.rs
src/types/: conversion.rs  mod.rs
src/utils/: luautils.rs  mod.rs
(+23 files in other folders)
